# elments_of_programming_interview

./: .gitignore  4sum.cpp  README.md  es2.cpp  find_duplicate.cpp  get_next_perm.cpp  longest_palindromic_substr.cpp  lru.cpp  people_height.cpp  points.cpp  print_all.cpp  segment_tree.cpp  spiral.cpp  utils.hpp
ch10/: btree.hpp  es12.cpp  es3.cpp  es4.cpp  es5.cpp  es6.cpp  es7.cpp  es8.cpp
ch11/: es1.cpp  es5.cpp  es6.cpp  test_apple  test_cisco
ch12/: binary_search.cpp  es1.cpp  es10.cpp  es13.cpp  es2.cpp  es3.cpp  es4.cpp  es9.cpp
ch13/: es1.cpp  es8.cpp
ch14/: es4.cpp  es8.cpp  qsort.cpp
ch15/: es1.cpp  es2.cpp  es3.cpp  es8.cpp  tree.hpp
ch16/: es2.cpp  es3.cpp  es4.cpp  es6.cpp  graph.hpp
ch17/: coins.cpp  es1.cpp  es10.cpp  es12.cpp  es2.cpp  es21.cpp  es3.cpp  es4.cpp  es6.cpp  es7.cpp  find_all_combination.cpp  knapsack.cpp  tot_ways_of_coin_change.cpp  word_break.cpp
ch17_old/: es11.cpp  es13.cpp  es17.cpp  es4.cpp  es5.cpp  es9.cpp
ch18/: es1.cpp  es11.cpp  es14.cpp  es2.cpp  es3.cpp  es5.cpp  es6.cpp  es9.cpp
ch18/old/: es10.cpp  tournament_tree.cpp
ch19/: Graph.hpp  Union.hpp  \  es10.cpp  es18.cpp  es6.cpp  graph.txt  graph3.txt  graph4.txt  graph7.txt  test.cpp  test_union.cpp
ch5/: .es1.cpp.swp  es1.cpp  es10.cpp  es11.cpp  es12.cpp  es13.cpp  es15.cpp  es2.cpp  es4.cpp  es5.cpp  es6.cpp  es7.cpp  es8.cpp  es9.cpp
ch6/: es1.cpp  es12.cpp  es13.cpp  es13_bis.cpp  es14.cpp  es15.cpp  es16.cpp  es16_bis.cpp  es17.cpp  es19.cpp  es19_bis.cpp  es2.cpp  es21_bis.cpp  es22_bis.cpp  es23_bis.cpp  es25_bis.cpp  es26.cpp  es26_bis.cpp  es3.cpp  es4.cpp  es5.cpp  es6.cpp  es7.cpp  es8.cpp  es9.cpp
ch7/: es11.cpp  es11_bis.cpp  es12.cpp  es12_bis.cpp  es13.cpp  es13_bis.cpp  es14_bis.cpp  es2.cpp  es3_bis.cpp  es5.cpp  es5_bis.cpp  es8.cpp
ch8/: es10.cpp  es11.cpp  es14.cpp  es15.cpp  es16.cpp  es18.cpp  es6.cpp  list.hpp
ch9/: es1.cpp  es10.cpp  es11.cpp  es2.cpp  es3.cpp  es4.cpp  es6.cpp  es7.cpp  es8.cpp
first_pass/: all_4sum.cpp  amazon_n_ary_tree.cpp  chords.cpp  es1.cpp  hist.cpp  interval_sum.cpp  list_2_tree.cpp  longestPrefix.cpp  merge_k_sorted_list.cpp  min_steps.cpp  must_know.txt  shortest_prefix.cpp  string_concatenation.cpp  test  window_string.cpp  word_break_2.cpp
first_pass/ch10/: es1.cpp  es10.cpp  es2.cpp  es4.cpp
first_pass/ch11/: es2.cpp  es3.cpp  es7.cpp
first_pass/ch12/: es11.cpp  es14.cpp  find_median.cpp
first_pass/ch13/: es10.cpp  es2.cpp  es3.cpp  es5.cpp  es6.cpp  es7.cpp  es9.cpp
first_pass/ch14/: es1.cpp  es2.cpp  es3.cpp  es5.cpp  es6.cpp
first_pass/ch15/: es1.cpp  es3.cpp  es4.cpp  es5.cpp  es6.cpp  es7.cpp  es7_old.cpp  es8_old.cpp
first_pass/ch16/: es1.cpp  es10.cpp  es5.cpp  es7.cpp  es8.cpp  graph.cpp
first_pass/ch17/: es1.cpp  es10.cpp  es11.cpp  es13.cpp  es14.cpp  es16.cpp  es17.cpp  es18.cpp  es19.cpp  es3.cpp  es5.cpp  es8.cpp  es9.cpp
first_pass/ch17_old/: es10.cpp  es14.cpp  es15.cpp  es16.cpp  es18.cpp  es19.cpp  es6.cpp  es8.cpp
first_pass/ch18/: es12.cpp  es4.cpp  es7.cpp
first_pass/ch19/: Graph.hpp  Union.hpp  es1.cpp  es19.cpp  es2.cpp  es3.cpp  es5.cpp  graph.txt  graph2.txt  graph5.txt  graph6.txt  test.cpp  test_union.cpp
first_pass/ch5/: bit.cpp  bit.hpp  es1.cpp  es10.cpp  es15.cpp  es3.cpp  es4.cpp  es8.cpp  es9.cpp
first_pass/ch6/: es1.cpp  es10.cpp  es11.cpp  es12.cpp  es14_bis.cpp  es15_bis.cpp  es2.cpp  es20.cpp  es20_bis.cpp  es21.cpp  es24.cpp  es24_bis.cpp  es25.cpp  es3.cpp  es5.cpp  es8.cpp
first_pass/ch7/: es1.cpp  es10.cpp  es10_bis.cpp  es2_bis.cpp  es3.cpp  es4.cpp  es4_bis.cpp  es6.cpp  es6_bis.cpp  es7.cpp  es7_bis.cpp  es8_bis.cpp  es9.cpp  es9_bis.cpp
first_pass/ch8/: es1.cpp  es12.cpp  es13.cpp  es17.cpp  es2.cpp  es3.cpp  es4.cpp  es5.cpp  es7.cpp  es9.cpp  list.hpp
first_pass/ch9/: es12.cpp  es13.cpp  es4.cpp  es5.cpp  es9.cpp
second_pass/: coin_change.cpp  different_ways_to_add_parentheses.cpp
second_pass/ch10/: CMakeLists.txt  ch10.hpp  es2.cpp  es3.cpp  test2.cpp  test3.cpp  tree.hpp  treeTest.cpp
second_pass/ch11/: CMakeLists.txt  ch11.hpp  es1.cpp  es3.cpp  es4.cpp  es7.cpp  es8.cpp  test1.cpp  test2.cpp  test3.cpp  test4.cpp  test7.cpp  test8.cpp
second_pass/ch12/: CMakeLists.txt  ch12.hpp  es1.cpp  es2.cpp  es3.cpp  es4.cpp  test1.cpp  test2.cpp  test3.cpp  test4.cpp
second_pass/ch13/: CMakeLists.txt  ch14.hpp  es1.cpp  es2.cpp  es3.cpp  test1.cpp  test2.cpp  test3.cpp
second_pass/ch14/: CMakeLists.txt  ch14.hpp  es1.cpp  es10.cpp  es13.cpp  es14.cpp  es15.cpp  es16.cpp  es2.cpp  es4.cpp  es4.hpp  es5.cpp  es5.hpp  es8.cpp  interval_tree.hpp  main.cpp  test1.cpp  test10.cpp  test13.cpp  test14.cpp  test15.cpp  test16.cpp  test2.cpp  test4.cpp  test5.cpp  test8.cpp  testIntervalTree.cpp
second_pass/ch15/: CMakeLists.txt  ch15.hpp  es1.cpp  es10.cpp  es11.cpp  es16.cpp  es16.hpp  es4.cpp  es7.cpp  es8.cpp  es8.hpp  test1.cpp  test10.cpp  test11.cpp  test16.cpp  test18.cpp  test2.cpp  test4.cpp  test5.cpp  test7.cpp  test8.cpp  test_utilities.cpp
second_pass/ch16/: :w  CMakeLists.txt  ch16.hpp  es1.cpp  es13.cpp  es2.cpp  generate_palidromic_decomposition.cpp  generate_valid_parenthesisation.cpp  gray.cpp  nQueens.cpp  n_binary_tree.cpp  perm.cpp  recover_ip_addresses.cpp  regex.cpp  skyline.cpp  test1.cpp  test13.cpp  test2.cpp
second_pass/ch17/: best_partition.cpp  binomial_coefficient.cpp  count_combination.cpp  count_steps.cpp  critical_height.cpp  defective_jugs.cpp  edit_distance.cpp  is_interleave.cpp  knapsack.cpp  longest_non_decreasing_subsequence.cpp  match_sequence.cpp  max_path_in_triangle.cpp  max_sub_array_circular.cpp  max_sum.cpp  min_cut.cpp  n_ways_to_traverse_2d_array.cpp  pick_up_coins.cpp  plan_fisherman_trip.cpp  prob_republican_majority.cpp  tie_in_presidential_election.cpp
second_pass/ch18/: first_fit.cpp  gas_pump.cpp  huffman.cpp  majority1.cpp  majority2.cpp
second_pass/ch5/: CMakeLists.txt  ch1.hpp  digit_sorted.cpp  es1.cpp  es2.cpp  es3.cpp  es4.cpp  test1.cpp  test2.cpp  test3.cpp  test4.cpp
second_pass/ch6/: CMakeLists.txt  apply_permutation.cpp  ch6.hpp  count_primes.cpp  (+17 more)
(+39 files in other folders)
